# PythonCallCpp

./: .gitignore  .gitmodules  readme.md
c_src/: CMakeLists.txt  sample.c  sample.h
ctypes/: sample.py  test_ctypes.ipynb
pybind11/: CMakeLists.txt  readme.md
pybind11/include/: common.h  embed_interpreter.h  json_utils.h
pybind11/src/: main.cpp
pybind11/src/bind_class/: CMakeLists.txt  bind_class.cpp
pybind11/src/bind_func/: CMakeLists.txt  bind_func.cpp
pybind11/src/call_python/: CMakeLists.txt  call_python.cpp
pybind11/src/embed_interpreter/: CMakeLists.txt  embed_interpreter.cpp
pybind11/src/json_utils/: CMakeLists.txt  josn_utils.cpp
pybind11/test/: test_demo.ipynb
pybind11/test/CallPython/: CMakeLists.txt  test_call_python.cpp
pybind11/test/CallPython/Release/: TestCallPython.exp  TestCallPython.lib  json_utils.py  test.json
pybind11/test/EmbedInterpreter/: CMakeLists.txt  test_embed_interpreter.cpp
pybind11/test/EmbedInterpreter/Release/: TestEmbedInterpreter.exp  TestEmbedInterpreter.lib
pybind11/test/lib/: bind_class.cp37-win_amd64.pyd  bind_class.lib  bind_func.cp37-win_amd64.pyd  bind_func.lib
